package com.hotel_booking.entity.enums;

public enum BookingStatus {
    PENDING, CONFIRMED, CANCELLED
}
