package com.hotel_booking.entity.enums;

public enum PaymentStatus {
    INITIATED, SUCCESS, FAILED, REFUNDED
}
