package com.hotel_booking.entity.enums;

public enum RoomType {
    SINGLE, DOUBLE, SUITE
}
